Fix tooltip dark mode switch

--- a/app/packs/stylesheets/custom/_tooltip.scss
+++ b/app/packs/stylesheets/custom/_tooltip.scss
@@ -35,7 +35,7 @@
     }
 
     .tooltip-body {
-        color: $white;
+        color: $white !important;
         text-align: center;
         margin-bottom: 0px;
     }
@@ -70,7 +70,7 @@
     }
 
     .tooltip-body {
-        color: $gray-900;
+        color: $gray-900 !important;
         text-align: center;
         margin-bottom: 0px;
     }
